--- a/search.html
+++ b/search.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HydeSearch</title>
     <style>
@@ -13,6 +12,9 @@
             font-weight: bold;
         }
     </style>
+    <noscript>
+        <style>#hyde-search form {display: none;}</style>
+    </noscript>
 </head>
 <body>
     <header>
@@ -21,7 +23,6 @@
     <div id="hyde-search">
         <noscript>
             The search feature requires JavaScript to be enabled in your browser.
-            <style>#hyde-search form {display: none;}</style>
         </noscript>
         <form>
             <label for="search-input">Enter a search query:</label>
