Create init and load methods

--- a/search.html
+++ b/search.html
@@ -40,6 +40,8 @@
 
             console.log('Debug: HydeSearch initialized');
             console.log(Search);
+
+            Search.init();
         });
     </script>
 </body>
