--- a/search.html
+++ b/search.html
@@ -35,7 +35,7 @@
     <script>
         window.addEventListener('load', function() {
             console.log('Debug: Initializing HydeSearch');
-            const searchIndexLocation = 'https://cdn.desilva.se/temp/7d38cb8c-1293-4ed9-ad97-a29a106b3248%20/search.json';
+            const searchIndexLocation = 'tests/search.json';
             const Search = new HydeSearch(searchIndexLocation);
 
             console.log('Debug: HydeSearch initialized');
