Disable input autocomplete

--- a/search.html
+++ b/search.html
@@ -26,7 +26,7 @@
         </noscript>
         <form>
             <label for="search-input">Enter a search query:</label>
-            <input type="search" name="search" id="search-input">
+            <input type="search" name="search" id="search-input" autocomplete="off">
         </form>
     </div>
 
