Add basic styles

--- a/search.html
+++ b/search.html
@@ -11,6 +11,14 @@
             margin-bottom: 2px;
             font-weight: bold;
         }
+        .hyde-search-result {
+            margin-bottom: 4px;
+        }
+        .search-term-count {
+            font-size: 0.9em;
+            font-style: italic;
+            color: #555;
+        }
     </style>
     <noscript>
         <style>#hyde-search form {display: none;}</style>
