--- a/search.html
+++ b/search.html
@@ -26,6 +26,7 @@
 </head>
 <body>
     <header>
+        <h2>#CodingInPublic</h2>
         <h1>Experimental Frontend Search Engine for Hyde Documentation Sites</h1>
     </header>
     <div id="hyde-search">
