--- a/search.html
+++ b/search.html
@@ -27,7 +27,10 @@
 <body>
     <header>
         <h2>#CodingInPublic</h2>
-        <h1>Experimental Frontend Search Engine for Hyde Documentation Sites</h1>
+        <h1 style="font-size: 1.6em;">Experimental Frontend Search Engine for Hyde Documentation Sites</h1>
+        <p>
+            Fully client-side search using a precompiled JSON search index.
+        </p>
     </header>
     <div id="hyde-search">
         <noscript>
