Remove the form element

--- a/search.html
+++ b/search.html
@@ -36,10 +36,7 @@
         <noscript>
             The search feature requires JavaScript to be enabled in your browser.
         </noscript>
-        <form>
-            <label for="search-input">Enter a search query:</label>
-            <input type="search" name="search" id="search-input" autocomplete="off">
-        </form>
+        <input type="search" name="search" id="search-input" placeholder="Search..." autocomplete="off">
     </div>
 
     <script src="dist/HydeSearch.js"></script>
