--- a/search.html
+++ b/search.html
@@ -39,7 +39,7 @@
         <input type="search" name="search" id="search-input" placeholder="Search..." autocomplete="off">
     </div>
 
-    <script src="dist/HydeSearch.js"></script>
+    <script src="dist/HydeSearch.js" defer></script>
 
     <script>
         window.addEventListener('load', function() {
