Change margin to context element, and increase it

--- a/search.html
+++ b/search.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HydeSearch</title>
     <style>
-        .hyde-search-result {
-            margin-bottom: 4px;
+        .hyde-search-context {
+            margin-bottom: 8px;
         }
         .search-term-count {
             font-size: 0.9em;
