Add white-space pre-line to result context

--- a/search.html
+++ b/search.html
@@ -8,6 +8,7 @@
     <style>
         .hyde-search-context {
             margin-bottom: 8px;
+            white-space: pre-line;
         }
         .search-term-count {
             font-size: 0.9em;
