--- a/search.html
+++ b/search.html
@@ -9,7 +9,7 @@
         /* Demo Page Styles */
         body {
             background-color: #f2f2f2;
-            font-family: 'Raleway', serif;
+            font-family: 'Raleway', sans-serif;
             font-size: 16px;
             line-height: 1.5;
             color: #333;
