Place main content in <main> element

--- a/search.html
+++ b/search.html
@@ -45,12 +45,15 @@
             Fully client-side search using a precompiled JSON search index.
         </p>
     </header>
-    <div id="hyde-search">
-        <noscript>
-            The search feature requires JavaScript to be enabled in your browser.
-        </noscript>
-        <input type="search" name="search" id="search-input" placeholder="Search..." autocomplete="off" autofocus>
-    </div>
+    
+    <main>
+        <div id="hyde-search">
+            <noscript>
+                The search feature requires JavaScript to be enabled in your browser.
+            </noscript>
+            <input type="search" name="search" id="search-input" placeholder="Search..." autocomplete="off" autofocus>
+        </div>
+    </main>
     
     <script src="dist/HydeSearch.js" defer></script>
 
