--- a/search.html
+++ b/search.html
@@ -14,6 +14,8 @@
             line-height: 1.5;
             color: #333;
             padding: 4px 16px;
+            /* Ensure space under the input to prevent page jumping on mobile */
+            min-height: 150vh;
         }
         header {
             margin-top: 20px;
