Add max width to demo results

--- a/search.html
+++ b/search.html
@@ -35,6 +35,10 @@
     </style>
     <style>
         /* Sample Styles */
+        .hyde-search-results {
+            max-width: 800px;
+            overflow: auto;
+        }
         .hyde-search-context {
             margin-bottom: 8px;
             white-space: pre-line;
