Put main demo content in a card

--- a/search.html
+++ b/search.html
@@ -27,6 +27,14 @@
             margin-bottom: 8px;
             line-height: 1.2;
         }
+        main {
+            max-width: 600px;
+            overflow: auto;
+            background: white;
+            padding: 16px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
         input {
             font-size: 16px;
             line-height: 1.5;
@@ -35,10 +43,6 @@
     </style>
     <style>
         /* Sample Styles */
-        .hyde-search-results {
-            max-width: 800px;
-            overflow: auto;
-        }
         .hyde-search-context {
             margin-bottom: 8px;
             white-space: pre-line;
