Lower opacity of execution time text

--- a/search.html
+++ b/search.html
@@ -52,6 +52,9 @@
             font-style: italic;
             color: #555;
         }
+        .search-status small {
+            opacity: 0.75;
+        }
     </style>
     <noscript>
         <style>#hyde-search form {display: none;}</style>
