--- a/search.html
+++ b/search.html
@@ -40,6 +40,9 @@
             line-height: 1.5;
             padding: 4px 8px;
         }
+        dl {
+            margin: 0;
+        }
     </style>
     <style>
         /* Sample Styles */
