--- a/search.html
+++ b/search.html
@@ -20,7 +20,7 @@
             flex-direction: column;
         }
         header {
-            margin-top: 20px;
+            margin-top: 0;
             margin-bottom: 20px;
         }
         h1 {
@@ -36,6 +36,7 @@
             padding: 16px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
         }
         @media screen and (min-width: 800px) {
             body {
@@ -43,7 +44,7 @@
                 justify-content: space-evenly;
             }
             main, aside {
-                width: 50%;
+                width: 45%;
                 padding-left: 16px;
                 padding-right: 16px;
                 height: fit-content;
@@ -52,10 +53,8 @@
                 max-width: 600px;
                 margin-top: 16px;
             }
-            header {
-                margin-top: 0;
-            }
             aside {
+                width: 40%;
                 max-width: 65ch;
             }
         }
