--- a/search.html
+++ b/search.html
@@ -58,6 +58,12 @@
                 max-width: 65ch;
             }
         }
+        @media screen and (min-width: 1200px) {
+            body {
+                padding-left: 8vw;
+                padding-right: 8vw;
+            }
+        }
         input {
             font-size: 16px;
             line-height: 1.5;
