--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HydeSearch</title>
+    <title>HydeSearch Demo</title>
     <style>
         /* Demo Page Styles */
         body {
