Add network resource size to demo introduction

--- a/search.html
+++ b/search.html
@@ -100,6 +100,7 @@
             </p>
             <p role="doc-introduction" style="margin-top: 4px;">
                 Written in object-oriented TypeScript. Compiled to plain JavaScript. Zero dependencies.
+                <span title="Network resource size">~1.7kB</span>.
             </p>
         </header>
 
