--- a/search.html
+++ b/search.html
@@ -67,6 +67,12 @@
             line-height: 1.5;
             padding: 4px 8px;
         }
+        label {
+            font-size: 14px;
+            font-weight: bold;
+            display: block;
+            margin-bottom: 8px;
+        }
         dl {
             margin: 0;
         }
@@ -108,6 +114,7 @@
             <noscript>
                 The search feature requires JavaScript to be enabled in your browser.
             </noscript>
+            <label for="search-input">Try searching! 👇</label>
             <input type="search" name="search" id="search-input" placeholder="Search..." autocomplete="off" autofocus>
         </div>
     </main>
