Add about section with links

--- a/search.html
+++ b/search.html
@@ -117,6 +117,28 @@
     </main>
 
     <aside>
+        <header>
+            <h2>About</h2>
+            <p>
+                This plugin for the HydePHP static site generator was created
+                as a TypeScript learning project, and turned out to be much 
+                more useful than initially expected.
+            </p>
+        </header>
+        <article>
+            <h3>Links and information</h3>
+            <ul>
+                <li>
+                    Try the search on the <a href="https://demos.desilva.se/gist/github/hydephp/experiments/hydesearch/">hosted live demo</a>
+                </li>
+                <li>
+                    Find the <a href="https://github.com/hydephp/HydeSearch">source code on GitHub</a>
+                </li>
+                <li>
+                    Learn more about Hyde at <a href="https://hydephp.com/">HydePHP.com</a>
+                </li>
+            </ul>            
+        </article>
         <article>
             <h3>How does it work?</h3>
             <h4>
